--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
+html{
+
+}
 body{
     margin-top: 100px;
-    margin-bottom: 100px;
     background-color: #D2D3D5;
+    margin-bottom: 120px;
+
 }
 .busca{
     margin-bottom: 60px;
@@ -22,4 +26,27 @@ img{
 p{
     margin-top: 10px;
     font-size: 12px;
+}
+.navbar-inverse{
+    background-color: #727376 !important;
+    border-color: transparent; !important;
+}
+h4{
+    margin: 10px;
+    margin-top: 15px;
+    color: white;
+}
+footer{
+    margin-top: 100px;
+    background-color: #727376;
+    text-align: center;
+    width: 100%;
+    height: 25px;
+    margin-bottom: 0px;
+    display: block;
+}
+footer p{
+    color: white;
+    margin-top: 5px;
+
 }
