update controle de erros

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ p{
 }
 .navbar-inverse{
     background-color: #727376 !important;
-    border-color: transparent; !important;
+    border-color: transparent !important;
 }
 h4{
     margin: 10px;
