--- a/style.css
+++ b/style.css
@@ -72,6 +72,21 @@ ul{
   padding: 20px;
 }
 
+@media (max-width: 700px) {
+  .center{
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+  }
+  
+  .city{
+    margin: 20px 0px 20px 60px;
+    font-size: 14px;
+    font-style:italic;
+  }
+  
+}
+
 .line1{
  background-color: #C9EAF7; 
 }
