--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ ul{
     font-style:italic;
   }
   
+/*
   .video{
     width: 100%;
     min-height: 100px;
@@ -96,19 +97,20 @@ ul{
     max-width:560px; 
     max-height:310px; 
   }
+*/
   
 }
 
 .video{
   width: 100%;
-  min-height: 300px;
+  min-height: 100px;
   background-color: #242424;
   text-align: center;
 }
 
 iframe{
-  width:640px; 
-  height:360px; 
+  width:560px; 
+  height:310px; 
 }
 
 .line1{
