--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 .header{
-  min-height: 400px;
+  height: 100vh;
   width: 100%;
   background-image: url(source/bg.jpg);
   background-size: cover;
@@ -18,8 +18,19 @@ h2{
   color: black !important;
 }
 
+.col{
+  width: 50%;
+  float: left;
+  padding: 10px;
+}
+
 .content{
-  min-height: 400px;
+  min-height: 100vh;
+  width: 100%;
+  padding-bottom: 40px;
+}
+
+section{
   width: 100%;
   padding-bottom: 40px;
 }
@@ -30,10 +41,14 @@ p{
   font-size: 16px;
 }
 
+.p{
+  text-indent: 0em !important;
+}
+
 .city{
-  margin: 20px 0px 20px 120px;
+  margin: 10px 0px 10px 100px;
   font-size: 14px;
-  font-style:italic;
+/*  font-style:italic;*/
 }
 
 .menssage{
@@ -67,8 +82,8 @@ ul{
 }
 
 .center{
-  margin-left: 15%;
-  margin-right: 15%;
+  margin-left: 10%;
+  margin-right: 10%;
   padding: 20px;
 }
 
@@ -84,20 +99,6 @@ ul{
     font-size: 14px;
     font-style:italic;
   }
-  
-/*
-  .video{
-    width: 100%;
-    min-height: 100px;
-    background-color: #242424;
-    text-align: center;
-  }
-
-  iframe{
-    max-width:560px; 
-    max-height:310px; 
-  }
-*/
   
 }
 
@@ -123,4 +124,75 @@ iframe{
 
 .mt40{
   margin-top: 40px;
+}
+
+/*CARD*/
+
+.note{
+  background-color: #848993;
+  height: 70px;
+  margin: 5px;
+/*  width: 40%;*/
+/*  float: right;*/
+}
+
+.note:hover{
+  background-color: #5e636d;
+}
+
+.note>img{
+  height: 50px;
+  width: 50px;
+  margin: 10px;
+}
+
+.note>p{
+/*  float: right;*/
+  position: relative;
+  top: -70px;
+  margin-top: 15px;
+  padding-right: 20px;
+  padding-left: 10px;
+  text-indent: 0em !important;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+}
+
+
+/* SWIPE */
+.pd30{
+  padding-bottom: 30px;
+  width: 100%;
+}
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+/*
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  width: 60%;
+*/
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide:nth-child(1n) {
+    width: 80%;
 }
