--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ p{
 
 ul{
   font-size: 16px;
+  text-align: justify;
 }
 
 .title{
@@ -105,13 +106,17 @@ ul{
 .video{
   width: 100%;
   min-height: 100px;
-  background-color: #242424;
+  background-color: #000000;
   text-align: center;
 }
 
 iframe{
   width:560px; 
   height:310px; 
+}
+
+.line0{
+ background-color: #ffffff; 
 }
 
 .line1{
@@ -244,4 +249,21 @@ iframe{
 
 .swiper-slide:nth-child(1n) {
     width: 80%;
+}
+
+.full{
+  position: fixed;
+  height: 100vh;
+  z-index: -10;
+}
+
+.mainVideo{
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
+
+.videoCall{
+  color: #52658C;
+  font-weight: bold;
 }
